--- a/Heroes3MapReader.UI/Heroes3MapReader.UI.csproj
+++ b/Heroes3MapReader.UI/Heroes3MapReader.UI.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.3" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.3" />
         <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.1.3" />
+        <PackageReference Include="Avalonia.Diagnostics" Version="11.1.3" Condition="'$(Configuration)' == 'Debug'" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
     </ItemGroup>
