Added a display to the map details section showing the banned spells and playable factions

--- a/Heroes3MapReader.UI/Heroes3MapReader.UI.csproj
+++ b/Heroes3MapReader.UI/Heroes3MapReader.UI.csproj
@@ -24,4 +24,13 @@
     <ItemGroup>
         <ProjectReference Include="..\Heroes3MapReader.Logic\Heroes3MapReader.Logic.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\SpellSelectionWindow.axaml.cs">
+        <DependentUpon>SpellSelectionWindow.axaml</DependentUpon>
+      </Compile>
+      <Compile Update="Views\PlayableFactionsControl.axaml.cs">
+        <DependentUpon>PlayableFactionsControl.axaml</DependentUpon>
+      </Compile>
+    </ItemGroup>
 </Project>
