--- a/Heroes3MapReader.UI/Heroes3MapReader.UI.csproj
+++ b/Heroes3MapReader.UI/Heroes3MapReader.UI.csproj
@@ -32,5 +32,8 @@
       <Compile Update="Views\PlayableFactionsControl.axaml.cs">
         <DependentUpon>PlayableFactionsControl.axaml</DependentUpon>
       </Compile>
+      <Compile Update="Views\MapSizeFilterControl.axaml.cs">
+        <DependentUpon>MapSizeFilterControl.axaml</DependentUpon>
+      </Compile>
     </ItemGroup>
 </Project>
